Handle number type

--- a/program/ucl.conf
+++ b/program/ucl.conf
@@ -1,27 +1,28 @@
 jail0 {
-	bridge = bridge0
-	path = /usr/local/jails/${name}
-	persist = true
+  bridge = bridge0
+  path = /usr/local/jails/${name}
+  persist = true
+  devfs_rule = 8
 
-	interface {
-		create  = ifconfig epair create up
-		create  = ifconfig ${bridge} addm ${interface}a
-		destroy = ifconfig ${interface}a destroy
-	}
+  interface {
+    create  = ifconfig epair create up
+    create  = ifconfig ${bridge} addm ${interface}a
+    destroy = ifconfig ${interface}a destroy
+  }
 
-	interface {
-		create  = ifconfig epair create up
-		create  = ifconfig ${bridge} addm ${interface}a
-		destroy = ifconfig ${interface}a destroy
-	}
+  interface {
+    create  = ifconfig epair create up
+    create  = ifconfig ${bridge} addm ${interface}a
+    destroy = ifconfig ${interface}a destroy
+  }
 
-	exec {
-		start = /bin/sh /etc/rc
-		stop  = /bin/sh /etc/rc.shutdown jail
-	}
+  exec {
+    start = /bin/sh /etc/rc
+    stop  = /bin/sh /etc/rc.shutdown jail
+  }
 
-	host {
-		domain = "example.com"
-		hostname = ${name}.${domain}
-	}
+  host {
+    domain = "example.com"
+    hostname = ${name}.${domain}
+  }
 }
