Support more complex types

--- a/program/ucl.conf
+++ b/program/ucl.conf
@@ -25,4 +25,11 @@ jail0 {
     domain = "example.com"
     hostname = ${name}.${domain}
   }
+
+	rules = [1, 2, 3]
+	truth = [true, false]
+	nested = [
+		prc = { mr = pr }
+		prc = { cmr = dfvpr }
+	]
 }
