Add more xo output

--- a/program/ucl.conf
+++ b/program/ucl.conf
@@ -22,14 +22,18 @@ jail0 {
   }
 
   host {
-    domain = "example.com"
+    domain = example.com
     hostname = ${name}.${domain}
   }
 
 	rules = [1, 2, 3]
 	truth = [true, false]
-	nested = [
-		prc = { mr = pr }
-		prc = { cmr = dfvpr }
-	]
+	nested = {
+		prc {
+			mr = pr
+		}
+		prc {
+			cmr = dfvpr
+		}
+	}
 }
