Improve array value display

--- a/program/ucl.conf
+++ b/program/ucl.conf
@@ -22,18 +22,26 @@ jail0 {
   }
 
   host {
-    domain = example.com
+    domain   = example.com
     hostname = ${name}.${domain}
   }
 
-	rules = [1, 2, 3]
-	truth = [true, false]
-	nested = {
-		prc {
-			mr = pr
-		}
-		prc {
-			cmr = dfvpr
-		}
-	}
+  rules = [1, 2, 3]
+  truth = [true, false]
+  arr = [
+    {
+      one = two
+    }
+    {
+      tree = four
+    }
+  ]
+  nested = {
+    prc {
+      one = two
+    }
+    prc {
+      tree = four
+    }
+  }
 }
